--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node server.js",
     "nodemon": "nodemon server.js",
     "build": "next build",
-    "start": "next start",
+    "start": "NODE_ENV=production node server.js",
     "lint": "next lint"
   },
   "dependencies": {
